--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
